--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 load: POSTWORLD
 name: MyPermissions
-version: 1.2.0
+version: 1.2.0B
 author: ManatorDE
 website: https://dev.bukkit.org/projects/my-permissions
 main: de.manator.mypermissions.Main
