--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,15 @@
     <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
-           <version>1.18.1-R0.1-SNAPSHOT</version>
+           <version>1.18.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
     </dependency>
   </dependencies>
 
   <version>1.2.5_Pre1</version>
+
+  <properties>
+    <maven.compiler.source>1.17</maven.compiler.source>
+    <maven.compiler.target>1.17</maven.compiler.target>
+  </properties>
 </project>
