--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     </dependency>
   </dependencies>
 
-  <version>1.2.5_Pre1</version>
+  <version>1.2.5</version>
 
   <properties>
     <maven.compiler.source>1.17</maven.compiler.source>
