--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,12 @@
     <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
-           <version>1.18.2-R0.1-SNAPSHOT</version>
+           <version>1.19.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
     </dependency>
   </dependencies>
 
-  <version>1.2.7</version>
+  <version>1.2.7_pre1</version>
 
   <properties>
     <maven.compiler.source>1.17</maven.compiler.source>
