--- a/src/main/java/plugin.yml
+++ b/src/main/java/plugin.yml
@@ -1,10 +1,11 @@
 load: POSTWORLD
 name: MyPermissions
-version: 1.2.7_pre1
+version: 1.2.7
 author: ManatorDE
 website: https://dev.bukkit.org/projects/my-permissions
 main: de.manator.mypermissions.Main
 api-version: 1.17
+softdepend: [Essentials]
 prefix: MyPermissions
 commands:
   mp:
